--- a/SalesForce-TrailBlazerApp/classes/DreamHouseSampleDataController.cls
+++ b/SalesForce-TrailBlazerApp/classes/DreamHouseSampleDataController.cls
@@ -1,5 +1,5 @@
 global with sharing class DreamHouseSampleDataController {
-//worshop modification
+//worshop modification test
     @RemoteAction
     global static void deleteAll() {
         DELETE [SELECT ID FROM favorite__c];    
