test apex change

--- a/SalesForce-TrailBlazerApp/classes/ChangePasswordController.cls
+++ b/SalesForce-TrailBlazerApp/classes/ChangePasswordController.cls
@@ -1,5 +1,5 @@
 /**
- * An apex page controller that exposes the change password functionality. rama test
+ * An apex page controller that exposes the change password functionality.
  */
 public with sharing class ChangePasswordController {
     public String oldPassword {get; set;}
