--- a/SalesForce-TrailBlazerApp/classes/ChangePasswordController.cls
+++ b/SalesForce-TrailBlazerApp/classes/ChangePasswordController.cls
@@ -1,5 +1,6 @@
 /**
  * An apex page controller that exposes the change password functionality.test and test
+ * Task# 1120 - 2
  */
 public with sharing class ChangePasswordController {
     public String oldPassword {get; set;}
