--- a/SalesForce-TrailBlazerApp/classes/CommunitiesLoginController.cls
+++ b/SalesForce-TrailBlazerApp/classes/CommunitiesLoginController.cls
@@ -5,7 +5,7 @@ global with sharing class CommunitiesLoginController {
 
     global CommunitiesLoginController () {}
     
-    // Code we will invoke on page load.
+    // Code we will invoke on page load. Task# 1120 - 1
     global PageReference forwardToAuthPage() {
     	String startUrl = System.currentPageReference().getParameters().get('startURL');
     	String displayType = System.currentPageReference().getParameters().get('display');
